--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "raf": "3.4.0",
     "raw-loader": "0.5.1",
     "react": "^16.2.0",
+    "react-cookie-consent": "1.3.0",
     "react-date-picker": "6.10.1",
     "react-dates": "16.7.0",
     "react-dev-utils": "^5.0.0",
